--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -878,7 +878,8 @@ When using zsh with powerlevel10k, the ~MesloLGS NF~ font is required to make th
 This is the section to include imports from other files.
 
 #+begin_src emacs-lisp
+;; Uncomment this to use EXWM. I currently don't use this.
 (let ((exwm-org-file "~/.emacs.d/exwm.org"))
-(when (file-exists-p exwm-org-file)
-  (org-babel-load-file exwm-org-file)))
+;(when (file-exists-p exwm-org-file)
+;  (org-babel-load-file exwm-org-file)))
 #+end_src
